k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: design
    namespace: web
spec:
    replicas: 1
    selector:
        matchLabels:
            app: design
    template:
        metadata:
            labels:
                app: design
        spec:
            imagePullSecrets:
                - name: ghcr-secret
            containers:
                - name: design
                  image: ghcr.io/false-ltd/design:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: "32Mi"
                          cpu: "50m"
                      limits:
                          memory: "64Mi"
                          cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
    name: design
    namespace: web
spec:
    selector:
        app: design
    ports:
        - port: 80
          targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: design
    namespace: web
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: "letsencrypt"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - design.false.ltd
          secretName: design-tls
    rules:
        - host: design.false.ltd
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: design
                            port:
                                number: 80
